# alpen

./: .codespellrc  .dockerignore  .gitignore  .justfile  .taplo.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_TEST_MIGRATION_STATUS.md  PROFILING.md  README.md  SESSION_SUMMARY.md  TRACING-QUICKSTART.md  asm-params.json  example_config.toml  fixes.md  flake.nix  getting-started.md  improvements.md  perf_ideas.md  report.md  rollup_params.json  rust-toolchain.toml  standards-to-follow.md
benches/: Cargo.toml
benches/benches/: l1_database.rs  l2_database.rs
benches/db/: Cargo.toml
benches/db/benches/: l1_database.rs  l2_database.rs
benches/db/src/: db.rs  lib.rs
benches/serialization/: Cargo.toml
benches/serialization/benches/: checkpoint_types.rs  identifiers.rs
benches/src/: db.rs  lib.rs
crates/acct-ssz-types/: Cargo.toml
crates/acct-ssz-types/schemas/: acct-types.ssz
crates/acct-ssz-types/src/: id.rs  lib.rs  messages.rs  state.rs
crates/acct-types/: Cargo.toml  build.rs
crates/acct-types/src/: accumulators.rs  amount.rs  constants.rs  effects.rs  errors.rs  id.rs  lib.rs  macros.rs  messages.rs  mmr.rs  state.rs  util.rs  varint_vec.rs
crates/acct-types/ssz/: accumulators.ssz  effects.ssz  messages.ssz  mmr.ssz  state.ssz
crates/asm-types/: Cargo.toml
crates/asm-types/src/: block.rs  header.rs  header_verification.rs  inclusion_proof.rs  lib.rs  ops.rs  proof.rs  timestamp_store.rs  tx.rs  utils.rs  work.rs
crates/bridge-params/: Cargo.toml
crates/bridge-params/src/: lib.rs
crates/bridge-types/: Cargo.toml
crates/bridge-types/src/: bridge.rs  bridge_ops.rs  bridge_state.rs  constants.rs  deposit.rs  lib.rs  operator.rs
crates/btc-types/: Cargo.toml
crates/btc-types/src/: address.rs  arbitrary_bitcoin.rs  asm_manifest.rs  block.rs  borsh_bitcoin.rs  btc.rs  constants.rs  errors.rs  genesis.rs  header.rs  inclusion_proof.rs  lib.rs  operator.rs  ops.rs  output.rs  params.rs  payload.rs  proof.rs  psbt.rs  pubkey.rs  raw_tx.rs  status.rs  transaction.rs  tx.rs  txid.rs  utils.rs  utils_generate.rs
crates/btc-verification/: Cargo.toml
crates/btc-verification/src/: header_verification.rs  timestamp_store.rs  utils_btc.rs  work.rs
crates/btcio/: Cargo.toml
crates/btcio/src/: lib.rs  params.rs  (+3 more)
crates/chain-worker/: Cargo.toml
crates/chain-worker-new/: Cargo.toml
crates/chaintsn/: Cargo.toml
crates/checkpoint-types/: Cargo.toml
crates/checkpoint-types-new/: Cargo.toml
crates/checkpoint-types-ssz/: Cargo.toml  build.rs
crates/codec-utils/: Cargo.toml
crates/common/: Cargo.toml
crates/consensus-logic/: Cargo.toml
crates/crypto/: Cargo.toml
crates/csm-types/: Cargo.toml
crates/csm-worker/: Cargo.toml
crates/db-store-sled/: Cargo.toml
crates/db-tests/: Cargo.toml
crates/ee-acct-runtime/: Cargo.toml
functional-tests/: .gitignore  README.md  build_strata_bins.sh  ckpt-test.py  entry.py  env.bash  pyproject.toml  run_test.sh  run_tests.sh  update_run_test.sh
functional-tests-new/: .gitignore  README.md  SUMMARY.md  entry.py  pyproject.toml  run_tests.sh
functional-tests-new/common/: __init__.py  accounts.py  bail_tags.py  base_test.py  bitcoin_service.py  config.py  context.py  crash_helpers.py  datatool.py  evm.py  evm_utils.py  params.py  rpc.py  runtime.py  service.py  strata_service.py  test_cli.py  test_logging.py  wait.py
functional-tests-new/docker/: Dockerfile
functional-tests-new/envconfigs/: __init__.py  alpen_client.py  basic.py  el_ol.py  ol_isolated.py  strata.py
functional-tests-new/factories/: __init__.py  alpen_client.py  bitcoin.py  strata.py
functional-tests-new/tests/: test_node_version.py  test_sequencer_block_production.py  test_sequencer_restart.py
functional-tests/_state_dump_artifacts/: dump_info.json  header.rlp  state_dump.jsonl
functional-tests/common/: __init__.py  bridge.py  crash_helpers.py  datatool.py  evm.py  evm_utils.py  external_bridge.py  ol_utils.py  rpc.py  runtime.py  safe_factory.py  safe_factory_create2.py  test_cli.py  utils.py  wait.py
functional-tests/contracts/: Delegator.sol  Suicider.sol
functional-tests/docker/: Dockerfile  docker-compose.yml
functional-tests/envconfigs/: __init__.py  alpen_client.py  el_ol.py  el_ol_checkpoint_sync.py  real_bridge.py  strata.py  strata_seq_fullnode.py  strata_unchecked.py
functional-tests/envs/: env_control_builder.py  rollup_params_cfg.py  testenv.py
functional-tests/factories/: __init__.py  alpen_client.py  bitcoin.py  signer.py  strata.py
functional-tests/factory/: alpen_client.py  factory.py  service.py  test_cli.py
functional-tests/load/: service.py
functional-tests/mixins/: __init__.py  bridge_mixin.py  bridge_out_precompile_contract_mixin.py  dbtool_mixin.py  seq_crash_mixin.py
functional-tests/rocksdb_prover/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
functional-tests/tests/: cl_block_witness.py  cl_ignore_checkpoint_with_invalid_proof.py  cl_reorg_resume_blockproduction.py  client_restart.py  client_status.py  ee_consistency_recovery.py  el_balance_transfer.py  el_batch_gas_limit.py  el_batch_state_diff.py  el_blob_transaction.py  el_block_generation.py  el_block_state_diff.py  el_block_witness_data.py  el_bridge_precompile.py  el_dump_state.py  el_exex_wal_pruning.py  el_genesis.py  el_pending_block.py  el_schnorr_precompile.py  el_stateroot_from_state_diffs.py  el_sync_from_chainstate.py  example-test.py  forward_tx.py  fullnode_ignore_checkpoint_with_invalid_proof.py  keepalive_stub_test.py  ol_block_witness.py  ol_reorg_resume_blockproduction.py  p2p_gossip.py  rpc_bridge_msg.py  rpc_el_inactive.py  rpc_exec_update.py  rpc_recent_blocks.py
functional-tests/utils/: constants.py  dbtool.py  evm_account.py  precompile.py  transaction.py  utils.py
tests/: Cargo.toml  lib.rs  stub.rs
tests/asm/: admin.rs  admin_to_checkpoint.rs  bridge.rs  bridge_to_checkpoint.rs  core.rs
tests/common/: admin.rs  asm.rs  bitcoind.rs  checkpoint.rs  harness.rs  mod.rs
tests/harness/: admin.rs  bridge.rs  checkpoint.rs  mod.rs  test_harness.rs  worker_context.rs
(+2773 files in other folders)
