[workspace]
resolver = "2"

members = [
  "crates/acct-types",
  "crates/asm/chain-types",
  "crates/asm/common",
  "crates/asm/logs",
  "crates/asm/stf",
  "crates/asm/moho-program",
  "crates/asm/spec",
  "crates/asm/spec-debug",
  "crates/asm/subprotocols/core",
  "crates/asm/subprotocols/bridge-v1",
  "crates/asm/subprotocols/debug-v1",
  "crates/asm/subprotocols/admin",
  "crates/asm/subprotocols/checkpoint-v0",
  "crates/asm/txs/admin",
  "crates/asm/txs/checkpoint",
  "crates/asm/txs/bridge-v1",
  "crates/asm-types",
  "crates/asm/worker",
  "crates/btc-types",
  "crates/btc-verification",
  "crates/btcio",
  "crates/chainexec",
  "crates/chaintsn",
  "crates/chain-worker",
  "crates/checkpoint-types",
  "crates/common",
  "crates/config",
  "crates/consensus-logic",
  "crates/csm-worker",
  "crates/crypto",
  "crates/csm-types",
  "crates/da-framework",
  "crates/db",
  "crates/db-store-sled",
  "crates/db-store-rocksdb",
  "crates/db-tests",
  "crates/ee-acct-runtime",
  "crates/ee-acct-types",
  "crates/ee-chain-types",
  "crates/eectl",
  "crates/evmexec",
  "crates/identifiers",
  "crates/key-derivation",
  "crates/l1tx",
  "crates/ledger-types",
  "crates/mpt",
  "crates/ol/chain-types",
  "crates/ol/state-types",
  "crates/ol-chainstate-types",
  "crates/params",
  "crates/primitives",
  "crates/proof-impl/checkpoint",
  "crates/proof-impl/cl-stf",
  "crates/proof-impl/evm-ee-stf",
  "crates/zkvm/hosts",
  "crates/reth/chainspec",
  "crates/reth/db",
  "crates/reth/evm",
  "crates/reth/exex",
  "crates/reth/node",
  "crates/reth/rpc",
  "crates/rpc/api",
  "crates/rpc/prover-client-api",
  "crates/rpc/types",
  "crates/rpc/utils",
  "crates/sequencer",
  "crates/service",
  "crates/simple-ee",
  "crates/snark-acct-types",
  "crates/state",
  "crates/status",
  "crates/storage",
  "crates/sync",
  "crates/tasks",
  "crates/test-utils/btc",
  "crates/test-utils/evm-ee",
  "crates/test-utils/l2",
  "crates/test-utils/test-utils",
  "crates/test-utils/tx-indexer",
  "crates/util/mmr",
  "provers/sp1",

  # binaries listed separately
  "bin/datatool",
  "bin/alpen-cli",
  "bin/strata-client",
  "bin/strata-dbtool",
  "bin/alpen-reth",
  "bin/strata-sequencer-client",
  "bin/prover-client",
  "bin/prover-perf",

  # integration tests
  "tests",
  "crates/util/python-utils",

  # benchmarks
  "benches",
]

default-members = [
  "bin/datatool",
  "bin/prover-client",
  "bin/alpen-reth",
  "bin/strata-client",
  "bin/strata-dbtool",
  "bin/strata-sequencer-client",
  "bin/alpen-cli",
  "crates/util/python-utils",
]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
# rust.missing_docs = "warn" # TODO: we need to enable this in the near future
clippy.allow_attributes = "warn"
clippy.allow_attributes_without_reason = "warn"
rustdoc.all = "warn"

[workspace.dependencies]
alpen-chainspec = { path = "crates/reth/chainspec" }
alpen-reth-db = { path = "crates/reth/db" }
alpen-reth-evm = { path = "crates/reth/evm" }
alpen-reth-exex = { path = "crates/reth/exex" }
alpen-reth-node = { path = "crates/reth/node" }
alpen-reth-primitives = { path = "crates/reth/primitives" }
alpen-reth-rpc = { path = "crates/reth/rpc" }
alpen-reth-statediff = { path = "crates/reth/statediff" }
strata-acct-types = { path = "crates/acct-types" }
strata-asm-chain-types = { path = "crates/asm/chain-types" }
strata-asm-common = { path = "crates/asm/common" }
strata-asm-logs = { path = "crates/asm/logs" }
strata-asm-moho-program-impl = { path = "crates/asm/moho-program" }
strata-asm-proto-administration = { path = "crates/asm/subprotocols/administration" }
strata-asm-proto-bridge-v1 = { path = "crates/asm/subprotocols/bridge-v1" }
strata-asm-proto-checkpoint-txs = { path = "crates/asm/txs/checkpoint" }
strata-asm-proto-checkpoint-v0 = { path = "crates/asm/subprotocols/checkpoint-v0" }
strata-asm-proto-core = { path = "crates/asm/subprotocols/core" }
strata-asm-proto-debug-v1 = { path = "crates/asm/subprotocols/debug-v1" }
strata-asm-spec = { path = "crates/asm/spec" }
strata-asm-spec-debug = { path = "crates/asm/spec-debug" }
strata-asm-stf = { path = "crates/asm/stf" }
strata-asm-txs-admin = { path = "crates/asm/txs/admin" }
strata-asm-txs-bridge-v1 = { path = "crates/asm/txs/bridge-v1" }
strata-asm-types = { path = "crates/asm-types" }
strata-asm-worker = { path = "crates/asm/worker" }
strata-bridge-types = { path = "crates/bridge-types" }
strata-btc-types = { path = "crates/btc-types" }
strata-btc-verification = { path = "crates/btc-verification" }
strata-btcio = { path = "crates/btcio" }
strata-chain-worker = { path = "crates/chain-worker" }
strata-chainexec = { path = "crates/chainexec" }
strata-chaintsn = { path = "crates/chaintsn" }
strata-checkpoint-types = { path = "crates/checkpoint-types" }
strata-cli-common = { path = "crates/strata-cli-common" }
strata-common = { path = "crates/common" }
strata-config = { path = "crates/config" }
strata-consensus-logic = { path = "crates/consensus-logic" }
strata-crypto = { path = "crates/crypto", default-features = false }
strata-csm-types = { path = "crates/csm-types" }
strata-csm-worker = { path = "crates/csm-worker" }
strata-da-framework = { path = "crates/da-framework" }
strata-db = { path = "crates/db" }
strata-db-store-rocksdb = { path = "crates/db-store-rocksdb" }
strata-db-store-sled = { path = "crates/db-store-sled" }
strata-db-tests = { path = "crates/db-tests" }
strata-ee-acct-runtime = { path = "crates/ee-acct-runtime" }
strata-ee-acct-types = { path = "crates/ee-acct-types" }
strata-ee-chain-types = { path = "crates/ee-chain-types" }
strata-eectl = { path = "crates/eectl" }
strata-evmexec = { path = "crates/evmexec" }
strata-identifiers = { path = "crates/identifiers", default-features = false }
strata-key-derivation = { path = "crates/key-derivation" }
strata-l1tx = { path = "crates/l1tx" }
strata-ledger-types = { path = "crates/ledger-types" }
strata-mmr = { path = "crates/util/mmr" }
strata-mpt = { path = "crates/mpt" }
strata-ol-chain-types = { path = "crates/ol-chain-types" }
strata-ol-chain-types-new = { path = "crates/ol/chain-types" }
strata-ol-chainstate-types = { path = "crates/ol-chainstate-types" }
strata-ol-state-types = { path = "crates/ol/state-types" }
strata-params = { path = "crates/params" }
strata-primitives = { path = "crates/primitives" }
strata-proofimpl-checkpoint = { path = "crates/proof-impl/checkpoint" }
strata-proofimpl-cl-stf = { path = "crates/proof-impl/cl-stf" }
strata-proofimpl-evm-ee-stf = { path = "crates/proof-impl/evm-ee-stf" }
strata-prover-client-rpc-api = { path = "crates/rpc/prover-client-api" }
strata-rpc-api = { path = "crates/rpc/api" }
strata-rpc-types = { path = "crates/rpc/types" }
strata-rpc-utils = { path = "crates/rpc/utils" }
strata-sequencer = { path = "crates/sequencer" }
strata-service = { path = "crates/service" }
strata-simple-ee = { path = "crates/simple-ee" }
strata-snark-acct-types = { path = "crates/snark-acct-types" }
strata-state = { path = "crates/state" }
strata-status = { path = "crates/status" }
strata-storage = { path = "crates/storage" }
strata-sync = { path = "crates/sync" }
strata-tasks = { path = "crates/tasks" }
strata-test-utils = { path = "crates/test-utils/test-utils" }
strata-test-utils-btc = { path = "crates/test-utils/btc" }
strata-test-utils-evm-ee = { path = "crates/test-utils/evm-ee" }
strata-test-utils-l2 = { path = "crates/test-utils/l2" }
strata-test-utils-tx-indexer = { path = "crates/test-utils/tx-indexer" }
strata-zkvm-hosts = { path = "crates/zkvm/hosts" }

# strata-common
strata-codec = { git = "https://github.com/alpenlabs/strata-common" }
strata-codec-tests = { git = "https://github.com/alpenlabs/strata-common" }
strata-l1-envelope-fmt = { git = "https://github.com/alpenlabs/strata-common" }
strata-l1-txfmt = { git = "https://github.com/alpenlabs/strata-common" }
strata-msg-fmt = { git = "https://github.com/alpenlabs/strata-common" }

# sled wrapper
typed-sled = { git = "https://github.com/alpenlabs/typed-sled" }

# moho
moho-runtime-impl = { git = "https://github.com/alpenlabs/moho" }
moho-runtime-interface = { git = "https://github.com/alpenlabs/moho" }
moho-types = { git = "https://github.com/alpenlabs/moho" }

# zkaleido
zkaleido = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc16" }
zkaleido-native-adapter = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc16" }
zkaleido-sp1-groth16-verifier = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc16" }

make_buf = { git = "https://github.com/alpenlabs/make_buf", version = "1.0.2" }

# IMPORTANT: ensure alloy-* and revm packages are of the same version as inside reth dependency
# reth dependencies:
alloy = { version = "1.0.37", features = [
  "std",
  "rpc-client-ws",
  "network",
  "signers",
  "signer-local",
  "providers",
  "rpc-types",
] }
alloy-consensus = { version = "1.0.37", default-features = false }
alloy-eips = { version = "1.0.37", default-features = false }
alloy-genesis = { version = "1.0.37", default-features = false }
alloy-network = { version = "1.0.37", default-features = false }
alloy-primitives = { version = "1.3.1", default-features = false, features = [
  "sha3-keccak",
  "map-foldhash",
] }
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-rlp-derive = "0.3.10"
alloy-rpc-types = { version = "1.0.37", features = [
  "eth",
], default-features = false }
alloy-rpc-types-engine = { version = "1.0.37", default-features = false }
alloy-rpc-types-eth = { version = "1.0.37", default-features = false, features = [
  "serde",
] }
alloy-serde = { version = "1.0.37", default-features = false }
alloy-sol-types = "1.3.0"
alloy-trie = { version = "0.9.1", default-features = false, features = [
  "arbitrary",
  "serde",
] }
revm = { version = "29.0.1", features = [
  "serde",
  "kzg-rs",
  "bn",
], default-features = false }
revm-primitives = { version = "20.2.1", features = [
  "std",
  "serde",
], default-features = false }

# reth itself:
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-ipc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", default-features = false, features = [
  "std",
  "serde-bincode-compat",
] }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", default-features = false }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", default-features = false }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", default-features = false }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }

rsp-client-executor = { git = "https://github.com/succinctlabs/rsp", tag = "reth-1.8.2" }
rsp-mpt = { git = "https://github.com/succinctlabs/rsp", tag = "reth-1.8.2" }
rsp-primitives = { git = "https://github.com/succinctlabs/rsp", tag = "reth-1.8.2" }
sp1-helper = "5.2.1"
sp1-sdk = "5.2.1"

anyhow = "1.0.86"
arbitrary = { version = "1.3.2", features = ["derive"] }
argh = "0.1"
async-trait = "0.1.80"
base64 = "0.22.1"
bdk_bitcoind_rpc = "0.17.1"
bdk_esplora = { version = "0.20.1", features = [
  "async-https",
  "async-https-rustls",
  "tokio",
], default-features = false }
bdk_wallet = "1.0.0"
bincode = "1.3"
bitcoin = { version = "0.32.6", features = ["serde"] }
bitcoin-bosd = { version = "0.4.0", default-features = false }
bitcoind-async-client = "0.1.1"
bitvec = "1.0.1"
borsh = { version = "1.5.0", features = ["derive"] }
bytes = "1.6.0"
cfg-if = "1.0.0"
chrono = "0.4.38"
clap = { version = "4.5.39", default-features = false, features = ["derive"] }
criterion = { version = "0.7.0", features = ["html_reports"] }
deadpool = "0.12.1"
digest = "0.10"
ethnum = "1.5.0"
eyre = "0.6"
format_serde_error = { git = "https://github.com/AlexanderThaller/format_serde_error" }
futures = "0.3"
futures-util = "0.3"
hex = { version = "0.4", features = ["serde"] }
http = "1.0.0"
hyper = "0.14.25"
int-enum = "1.2"
jsonrpsee = { version = "0.26.0" }
jsonrpsee-http-client = { version = "0.26.0" }
jsonrpsee-types = { version = "0.26.0" }
lru = "0.12"
mockall = "0.11"
musig2 = { version = "0.1.0", features = ["serde"] }
num_enum = "0.7"
opentelemetry = "0.26"
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
parking_lot = "0.12.3"
paste = "1.0"
rand = "0.8.5"
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = { version = "0.6", default-features = false }
reqwest = { version = "0.12.7", default-features = false, features = [
  "http2",
  "rustls-tls",
  "charset",
  "zstd",
  "json",
] }
rlp = "0.5.2"
rockbound = { git = "https://github.com/alpenlabs/rockbound", rev = "v2.0.1-alpen.3" }
secp256k1 = { version = "0.29.1", features = ["global-context", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "3.3.0"
sha2 = "0.10"
shrex = { version = "1", features = ["serde"] }
shrex_macros = "1"
sled = "0.34.7"
tempfile = "3.10.1"
terrors = "0.3.0"
thiserror = "2.0.11"
threadpool = "1.8"
tokio = { version = "1.37", features = ["full"] }
toml = "0.5"
tower = "0.5"
tracing = "0.1"
tracing-opentelemetry = "0.27"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
zeroize = { version = "1.8.1", features = ["derive"] }

# This is needed for custom build of SP1
[profile.release.build-override]
opt-level = 3

# This shall be used only in the CI for the prover to optimize the build time.
[profile.prover-ci]
inherits = "release"
lto = "off"
opt-level = 0
strip = true
