[workspace]
resolver = "2"

members = [
  "crates/acct-types",
  "crates/alpen-ee/block-assembly",
  "crates/alpen-ee/exec-chain",
  "crates/alpen-ee/common",
  "crates/alpen-ee/config",
  "crates/alpen-ee/da",
  "crates/alpen-ee/database",
  "crates/alpen-ee/engine",
  "crates/alpen-ee/genesis",
  "crates/alpen-ee/ol-tracker",
  "crates/alpen-ee/rpc/api",
  "crates/alpen-ee/rpc/server",
  "crates/alpen-ee/rpc/types",
  "crates/alpen-ee/sequencer",
  "crates/btcio",
  "crates/chainexec",
  "crates/chaintsn",
  "crates/chain-worker",
  "crates/chain-worker-new",
  "crates/checkpoint-types",
  "crates/cli-common",
  "crates/codec-utils",
  "crates/common",
  "crates/config",
  "crates/consensus-logic",
  "crates/csm-worker",
  "crates/csm-types",
  "crates/da-framework",
  "crates/db/types",
  "crates/db/store-sled",
  "crates/db/tests",
  "crates/ee-acct-runtime",
  "crates/ee-acct-types",
  "crates/ee-chain-types",
  "crates/ee-chunk-runtime",
  "crates/eectl",
  "crates/evm-ee",
  "crates/evmexec",
  "crates/key-derivation",
  "crates/ledger-types",
  "crates/mpt",
  "crates/node-context",
  "crates/ol/block-assembly",
  "crates/ol/chain-types",
  "crates/ol/checkpoint",
  "crates/ol/da",
  "crates/ol/mempool",
  "crates/ol/msg-types",
  "crates/ol/params",
  "crates/ol/rpc/api",
  "crates/ol/rpc/types",
  "crates/ol/sequencer",
  "crates/ol/state-provider",
  "crates/ol/state-support-types",
  "crates/ol/state-types",
  "crates/ol/stf",
  "crates/ol-chainstate-types",
  "crates/paas",
  "crates/prover-core",
  "crates/params",
  "crates/primitives",
  "crates/proof-impl/evm-ee-stf",
  "crates/proof-impl/alpen-chunk",
  "crates/proof-impl/alpen-acct",
  "crates/proof-impl/checkpoint",
  "crates/zkvm/hosts",
  "crates/reth/chainspec",
  "crates/reth/db",
  "crates/reth/evm",
  "crates/reth/exex",
  "crates/reth/node",
  "crates/reth/rpc",
  "crates/reth/witness",
  "crates/rpc/api",
  "crates/rpc/open-rpc",
  "crates/rpc/open-rpc-macros",
  "crates/rpc/types",
  "crates/rpc/utils",
  "crates/sequencer",
  "crates/simple-ee",
  "crates/snark-acct-runtime",
  "crates/snark-acct-sys",
  "crates/snark-acct-types",
  "crates/state",
  "crates/status",
  "crates/storage",
  "crates/storage-common",
  "crates/sync",
  "crates/test-utils/btcio",
  "crates/test-utils/evm-ee",
  "crates/test-utils/l2",
  "crates/test-utils/ssz",
  "crates/test-utils/test-utils",
  "provers/sp1",

  # binaries listed separately
  "bin/datatool",
  "bin/alpen-cli",
  "bin/strata-dbtool",
  "bin/alpen-client",
  "bin/strata",
  "bin/strata-signer",
  "bin/prover-perf",

  # integration tests
  "bin/strata-test-cli",

  # benchmarks
  "benches",
]

default-members = [
  "bin/datatool",
  "bin/alpen-client",
  "bin/strata",
  "bin/strata-dbtool",
  "bin/strata-signer",
  "bin/alpen-cli",
  "bin/strata-test-cli",
]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
# rust.missing_docs = "warn" # TODO: we need to enable this in the near future
clippy.allow_attributes = "warn"
clippy.allow_attributes_without_reason = "warn"
clippy.absolute_paths = "warn"
rustdoc.all = "warn"

[workspace.dependencies]
alpen-chainspec = { path = "crates/reth/chainspec" }
alpen-ee-block-assembly = { path = "crates/alpen-ee/block-assembly" }
alpen-ee-common = { path = "crates/alpen-ee/common" }
alpen-ee-config = { path = "crates/alpen-ee/config" }
alpen-ee-da = { path = "crates/alpen-ee/da" }
alpen-ee-database = { path = "crates/alpen-ee/database", default-features = false }
alpen-ee-engine = { path = "crates/alpen-ee/engine" }
alpen-ee-exec-chain = { path = "crates/alpen-ee/exec-chain" }
alpen-ee-genesis = { path = "crates/alpen-ee/genesis" }
alpen-ee-ol-tracker = { path = "crates/alpen-ee/ol-tracker" }
alpen-ee-rpc-api = { path = "crates/alpen-ee/rpc/api" }
alpen-ee-rpc-server = { path = "crates/alpen-ee/rpc/server" }
alpen-ee-rpc-types = { path = "crates/alpen-ee/rpc/types" }
alpen-ee-sequencer = { path = "crates/alpen-ee/sequencer" }
alpen-reth-db = { path = "crates/reth/db" }
alpen-reth-evm = { path = "crates/reth/evm" }
alpen-reth-exex = { path = "crates/reth/exex" }
alpen-reth-node = { path = "crates/reth/node" }
alpen-reth-primitives = { path = "crates/reth/primitives" }
alpen-reth-rpc = { path = "crates/reth/rpc" }
alpen-reth-statediff = { path = "crates/reth/statediff" }
alpen-reth-witness = { path = "crates/reth/witness" }
strata-acct-types = { path = "crates/acct-types" }
strata-btcio = { path = "crates/btcio" }
strata-chain-worker = { path = "crates/chain-worker" }
strata-chain-worker-new = { path = "crates/chain-worker-new" }
strata-chainexec = { path = "crates/chainexec" }
strata-chaintsn = { path = "crates/chaintsn" }
strata-checkpoint-types = { path = "crates/checkpoint-types" }
strata-cli-common = { path = "crates/cli-common" }
strata-codec-utils = { path = "crates/codec-utils" }
strata-common = { path = "crates/common" }
strata-config = { path = "crates/config" }
strata-consensus-logic = { path = "crates/consensus-logic" }
strata-csm-types = { path = "crates/csm-types" }
strata-csm-worker = { path = "crates/csm-worker" }
strata-da-framework = { path = "crates/da-framework" }
strata-db-store-sled = { path = "crates/db/store-sled" }
strata-db-tests = { path = "crates/db/tests" }
strata-db-types = { path = "crates/db/types" }
strata-ee-acct-runtime = { path = "crates/ee-acct-runtime" }
strata-ee-acct-types = { path = "crates/ee-acct-types" }
strata-ee-chain-types = { path = "crates/ee-chain-types" }
strata-ee-chunk-runtime = { path = "crates/ee-chunk-runtime" }
strata-eectl = { path = "crates/eectl" }
strata-evm-ee = { path = "crates/evm-ee" }
strata-evmexec = { path = "crates/evmexec" }
strata-key-derivation = { path = "crates/key-derivation" }
strata-ledger-types = { path = "crates/ledger-types" }
strata-mpt = { path = "crates/mpt" }
strata-node-context = { path = "crates/node-context" }
strata-ol-block-assembly = { path = "crates/ol/block-assembly" }
strata-ol-bridge-types = { path = "crates/bridge-types" }
strata-ol-chain-types = { path = "crates/ol-chain-types" }
strata-ol-chain-types-new = { path = "crates/ol/chain-types" }
strata-ol-chainstate-types = { path = "crates/ol-chainstate-types" }
strata-ol-checkpoint = { path = "crates/ol/checkpoint" }
strata-ol-da = { path = "crates/ol/da" }
strata-ol-genesis = { path = "crates/ol/genesis" }
strata-ol-mempool = { path = "crates/ol/mempool" }
strata-ol-msg-types = { path = "crates/ol/msg-types" }
strata-ol-params = { path = "crates/ol/params" }
strata-ol-rpc-api = { path = "crates/ol/rpc/api" }
strata-ol-rpc-types = { path = "crates/ol/rpc/types" }
strata-ol-sequencer = { path = "crates/ol/sequencer" }
strata-ol-state-provider = { path = "crates/ol/state-provider" }
strata-ol-state-support-types = { path = "crates/ol/state-support-types" }
strata-ol-state-types = { path = "crates/ol/state-types" }
strata-ol-stf = { path = "crates/ol/stf" }
strata-open-rpc = { path = "crates/rpc/open-rpc" }
strata-open-rpc-macros = { path = "crates/rpc/open-rpc-macros" }
strata-paas = { path = "crates/paas" }
strata-params = { path = "crates/params" }
strata-primitives = { path = "crates/primitives" }
strata-proofimpl-alpen-acct = { path = "crates/proof-impl/alpen-acct" }
strata-proofimpl-alpen-chunk = { path = "crates/proof-impl/alpen-chunk" }
strata-proofimpl-checkpoint = { path = "crates/proof-impl/checkpoint" }
strata-proofimpl-evm-ee-stf = { path = "crates/proof-impl/evm-ee-stf" }
strata-prover-core = { path = "crates/prover-core" }
strata-rpc-api = { path = "crates/rpc/api" }
strata-rpc-types = { path = "crates/rpc/types" }
strata-rpc-utils = { path = "crates/rpc/utils" }
strata-sequencer = { path = "crates/sequencer" }
strata-simple-ee = { path = "crates/simple-ee" }
strata-snark-acct-runtime = { path = "crates/snark-acct-runtime" }
strata-snark-acct-sys = { path = "crates/snark-acct-sys" }
strata-snark-acct-types = { path = "crates/snark-acct-types" }
strata-state = { path = "crates/state" }
strata-status = { path = "crates/status" }
strata-storage = { path = "crates/storage" }
strata-storage-common = { path = "crates/storage-common" }
strata-sync = { path = "crates/sync" }
strata-test-utils = { path = "crates/test-utils/test-utils" }
strata-test-utils-btcio = { path = "crates/test-utils/btcio" }
strata-test-utils-evm-ee = { path = "crates/test-utils/evm-ee" }
strata-test-utils-l2 = { path = "crates/test-utils/l2" }
strata-test-utils-ssz = { path = "crates/test-utils/ssz" }
strata-zkvm-hosts = { path = "crates/zkvm/hosts" }

# strata-common
strata-btc-types = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc19" }
strata-codec = { git = "https://github.com/alpenlabs/strata-common", features = [
  "derive",
], tag = "v0.1.0-alpha-rc19" }
strata-codec-tests = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc19" }
strata-crypto = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc19" }
strata-identifiers = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc19" }
strata-l1-envelope-fmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc19" }
strata-l1-txfmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc19" }
strata-logging = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc19" }
strata-merkle = { git = "https://github.com/alpenlabs/strata-common", features = [
  "legacy_compact",
], tag = "v0.1.0-alpha-rc19" }
strata-msg-fmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc19" }
strata-predicate = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc19" }
strata-service = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc19" }
strata-tasks = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc19" }

# asm
strata-asm-common = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-logs = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-manifest-types = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-params = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-proto-admin = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-proto-admin-txs = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-proto-bridge-v1 = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-proto-bridge-v1-msgs = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-proto-bridge-v1-txs = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-proto-bridge-v1-types = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-proto-checkpoint = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-proto-checkpoint-msgs = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-proto-checkpoint-txs = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-proto-checkpoint-types = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-proto-debug-v1 = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-proto-txs-test-utils = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-spec = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-spec-debug = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-stf = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-asm-worker = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-btc-verification = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }
strata-test-utils-btc = { git = "https://github.com/alpenlabs/asm", tag = "v0.1-alpha.7" }

# sled wrapper
typed-sled = { git = "https://github.com/alpenlabs/typed-sled" }

# zkaleido
zkaleido = { git = "https://github.com/alpenlabs/zkaleido", features = [
  "arbitrary",
  "ssz",
], tag = "v0.1.0-alpha-rc25" }
zkaleido-native-adapter = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc25" }
zkaleido-sp1-groth16-verifier = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc25" }
zkaleido-sp1-host = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc25", features = [
  "remote-prover",
] }

make_buf = { git = "https://github.com/alpenlabs/make_buf", version = "1.0.2" }

# IMPORTANT: ensure alloy-* and revm packages are of the same version as inside reth dependency
# reth dependencies:
alloy = { version = "1.0.41", features = [
  "std",
  "rpc-client-ws",
  "network",
  "signers",
  "signer-local",
  "providers",
  "rpc-types",
] }
alloy-consensus = { version = "1.0.41", default-features = false }
alloy-eips = { version = "1.0.41", default-features = false }
alloy-genesis = { version = "1.0.41", default-features = false }
alloy-network = { version = "1.0.41", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false, features = [
  "sha3-keccak",
  "map-foldhash",
] }
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-rlp-derive = "0.3.12"
alloy-rpc-types = { version = "1.1.0", features = [
  "eth",
], default-features = false }
alloy-rpc-types-engine = { version = "1.1.0", default-features = false }
alloy-rpc-types-eth = { version = "1.1.0", default-features = false, features = [
  "serde",
] }
alloy-serde = { version = "1.0.41", default-features = false }
alloy-sol-types = "1.4.1"
alloy-trie = { version = "0.9.1", default-features = false, features = [
  "arbitrary",
  "serde",
] }
revm = { version = "31.0.1", features = [
  "serde",
  "bn",
], default-features = false }
revm-primitives = { version = "21.0.2", features = [
  "std",
  "serde",
], default-features = false }

# reth itself:
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-ipc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-network-p2p = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1", default-features = false, features = [
  "std",
  "serde-bincode-compat",
] }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1", default-features = false }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1", default-features = false }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1", features = [
  "serde",
] }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1", default-features = false }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }

rsp-client-executor = { git = "https://github.com/succinctlabs/rsp", tag = "reth-1.9.1b" }
rsp-mpt = { git = "https://github.com/succinctlabs/rsp", tag = "reth-1.9.1b" }
rsp-primitives = { git = "https://github.com/succinctlabs/rsp", tag = "reth-1.9.1b" }
sp1-helper = "5.2.1"
sp1-sdk = "5.2.1"
sp1-verifier = "5.2.1"

anyhow = "1.0.86"
arbitrary = { version = "1.3.2", features = ["derive"] }
argh = "0.1"
async-trait = "0.1.80"
base64 = "0.22.1"
bdk_bitcoind_rpc = "0.17.1"
bdk_esplora = { version = "0.20.1", features = [
  "async-https",
  "async-https-rustls",
  "tokio",
], default-features = false }
bdk_wallet = "1.0.0"
bincode = "1.3"
bitcoin = { version = "0.32.6", features = ["serde"] }
bitcoin-bosd = { git = "https://github.com/alpenlabs/bitcoin-bosd", version = "0.10.0", tag = "v0.10.0", features = [
  "ssz",
] }
bitcoind-async-client = { version = "0.10.1", features = ["29_0"] }
bitvec = { version = "1.0.1", features = ["serde"] }
borsh = { version = "1.5.0", features = ["derive"] }
bytes = "1.11.1"
cfg-if = "1.0.0"
chrono = "0.4.38"
clap = { version = "4.5.39", default-features = false, features = ["derive"] }
corepc-node = { version = "0.10.0", features = ["29_0"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
deadpool = "0.12.1"
digest = "0.10"
ethnum = "1.5.0"
eyre = "0.6"
format_serde_error = { git = "https://github.com/AlexanderThaller/format_serde_error" }
futures = "0.3"
futures-util = "0.3"
hex = { version = "0.4", features = ["serde"] }
hex-literal = "0.4"
http = "1.0.0"
hyper = "0.14.25"
int-enum = "1.2"
itertools = "0.14"
jsonrpsee = { version = "0.26.0" }
jsonrpsee-http-client = { version = "0.26.0" }
jsonrpsee-types = { version = "0.26.0" }
k256 = { version = "0.13.4", features = ["schnorr"] }
lru = "0.18"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
mockall = "0.14"
musig2 = { version = "0.1.0", features = ["serde"] }
num_enum = "0.7"
opentelemetry = "0.26"
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
parking_lot = "0.12.3"
paste = "1.0"
proptest = "1.9.0"
rand = "0.8.5"
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = { version = "0.6", default-features = false }
reqwest = { version = "0.12.7", default-features = false, features = [
  "http2",
  "rustls-tls",
  "charset",
  "zstd",
  "json",
] }
rkyv = { version = "0.8.14", features = ["little_endian", "pointer_width_32"] }
rkyv_impl = "0.2.2"
rlp = "0.5.2"
schemars = "1"
secp256k1 = { version = "0.29.1", features = ["global-context", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "3.3.0"
sha2 = "0.10.8"
shrex = { version = "1", features = ["serde"] }
shrex_macros = "1"
sled = "0.34.7"
tempfile = "3.10.1"
terrors = "0.3.0"
thiserror = "2.0.11"
threadpool = "1.8"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.5"
tower = "0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.27"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
zeroize = { version = "1.8.1", features = ["derive"] }

ssz = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.15.0" }
ssz_codegen = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.15.0" }
ssz_derive = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.15.0" }
ssz_primitives = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.15.0" }
ssz_types = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.15.0" }
tree_hash = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.15.0" }
tree_hash_derive = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.15.0" }

# This is needed for custom build of SP1
[profile.release.build-override]
opt-level = 3

# This shall be used only in the CI for the prover to optimize the build time.
[profile.prover-ci]
inherits = "release"
lto = "off"
opt-level = 0
strip = true
