[package]
name = "alpen-benchmarks"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "l1_database"
harness = false

[[bench]]
name = "l2_database"
harness = false

[lints]
workspace = true

[dependencies]
arbitrary = { workspace = true }
bitcoin = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }

strata-db = { workspace = true }
strata-db-store-rocksdb = { workspace = true }
strata-primitives = { workspace = true }
strata-state = { workspace = true }

rockbound = { workspace = true } # TODO: remove with sled
