[package]
name = "alpen-benchmarks"
version = "0.4.0"
edition = "2021"

[features]
default = []
db = [
  "dep:strata-asm-manifest-types",
  "dep:strata-db-types",
  "dep:strata-primitives",
  "dep:strata-state",
  "dep:tempfile",
]
sled = ["db", "dep:strata-db-store-sled", "dep:typed-sled"]

[[bench]]
name = "l1_database"
harness = false
required-features = ["db"]

[lints]
workspace = true

[dependencies]
arbitrary = { workspace = true }
bitcoin = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true, optional = true }

strata-asm-manifest-types = { workspace = true, optional = true, features = [
  "arbitrary",
] }
strata-db-store-sled = { workspace = true, optional = true }
strata-db-types = { workspace = true, optional = true }
strata-primitives = { workspace = true, optional = true }
strata-state = { workspace = true, optional = true }

typed-sled = { workspace = true, optional = true }
